testdata/baselines/reference/submodule/conformance/optionalBindingParameters3.errors.txt
/a.js(7,4): error TS8009: The '?' modifier can only be used in TypeScript files.
/a.js(7,12): error TS8010: Type annotations can only be used in TypeScript files.
/a.js(9,12): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.


==== /a.js (3 errors) ====
    /**
     * @typedef Foo
     * @property {string} a
     */
    
    /**
     * @param {Foo} [options]
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
               ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f({ a = "a" }) {}
               ~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
    